modified justifcation back and updated contact form to match header styling

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
         </header>
         <!-- Content-->
         <div class="contact-form container content">
-            <h1>Contact Me</h1>
+            <h3><span class="dot">.</span>Contact Me</h3>
             <form action="mailto:>" method="post" enctype="text/plain">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" placeholder="Your name..">
@@ -57,7 +57,7 @@
             </form>
         </div>
         <div class="link-tree container content">
-            <h4>My Links</h4>
+            <h3><span class="dot">.</span>My Links</h3>
             <p>LinkedIn</p>
             <!-- LinkedIn Icon and Link -->
             <a href="https://www.linkedin.com/in/zachary-hill-1b1b5b1a0/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
