removed contact form

--- a/contact.html
+++ b/contact.html
@@ -44,26 +44,26 @@
             </nav>
         </header>
         <!-- Content-->
-        <div class="contact-form container content">
-            <h3><span class="dot">.</span>Contact Me</h3>
-            <form action="mailto:>" method="post" enctype="text/plain">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="Your name..">
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email" placeholder="Your email..">
-                <label for="subject">Subject</label>
-                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-                <input type="submit" value="Submit">
-            </form>
+        <div class="contact-me container">
+            <div class="contact-me header">
+                <h3><span class="dot">.</span>Contact Me</h3>
+            </div>
+            <div class="contact-me content">
+                <a href="mailto:zhill@zacharyhill.co">zhill@zacharyhill.co</a>
+            </div>
         </div>
-        <div class="link-tree container content">
-            <h3><span class="dot">.</span>My Links</h3>
-            <p>LinkedIn</p>
-            <!-- LinkedIn Icon and Link -->
-            <a href="https://www.linkedin.com/in/zachary-hill-1b1b5b1a0/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
-            <!-- GitHub Icon and Link -->
-            <p>GitHub</p>
-            <a href="https://github.com/zachreborn" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
+        <div class="link-tree container">
+            <div class="link-tree header">
+                <h3><span class="dot">.</span>My Links</h3>
+            </div>
+            <div class="link-tree content">
+                <p>LinkedIn</p>
+                <!-- LinkedIn Icon and Link -->
+                <a href="https://www.linkedin.com/in/zachary-hill-1b1b5b1a0/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+                <!-- GitHub Icon and Link -->
+                <p>GitHub</p>
+                <a href="https://github.com/zachreborn" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
+            </div>
         </div>
         
         <!-- Footer Copyright-->
