--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 <h3><span class="dot">.</span>Contact Me</h3>
             </div>
             <div class="contact-me content">
-                <a href="mailto:zhill@zacharyhill.co">zhill@zacharyhill.co</a>
+                <a href="mailto:zhill@zacharyhill.co" target="_blank"><i class="fa-regular fa-envelope fa-5x"></i></a>
             </div>
         </div>
         <div class="link-tree container">
