added additional style and classes for the about page photos

--- a/about.html
+++ b/about.html
@@ -84,7 +84,6 @@
                 <h3><span class="dot">.</span>Accolades &#38; Highlights</h3>
             </div>
             <div class="highlights content">
-                
                 <p>It's difficult to cover the breadth of my last 15 years without writing a long list. Instead, I'll try and cover some highlights which stand out to me.</p>
                 <h4>Highlights</h4>
                 <ul>
@@ -98,10 +97,12 @@
                     <li>Built the 1, 3, and 5 year technology strategy for 20+ financial institutions for many years.</li>
                     <li>And most importantly, watched my team grow from individual young engineers into a tight-knit team of strong senior engineers and leaders.</li>
                 </ul>
-                <img src="./media/images/2022_aws_partner_award.jpg" alt="Zachary Hill accepting the AWS Partner Award 2022 with three AWS leaders.">
-                <img src="./media/images/ts_zachary_team_building.jpg" alt="Zachary Hill with group of people teambuilding by building bridges out of marshmellows and sticks.">
-                <img src="./media/images/ts_zachary_aws_speaking.jpeg" alt="Zachary Hill speaking at AWS re:invent 2022">
-                <img src="./media/images/2022_aws_partner_of_the_year.jpg" alt="2022 AWS Partner of the Year trophy sitting on a table.">
+                <div class="highlights photos center">
+                    <img src="./media/images/2022_aws_partner_award.jpg" alt="Zachary Hill accepting the AWS Partner Award 2022 with three AWS leaders.">
+                    <img src="./media/images/ts_zachary_team_building.jpg" alt="Zachary Hill with group of people teambuilding by building bridges out of marshmellows and sticks.">
+                    <img src="./media/images/ts_zachary_aws_speaking.jpeg" alt="Zachary Hill speaking at AWS re:invent 2022">
+                    <img src="./media/images/2022_aws_partner_of_the_year.jpg" alt="2022 AWS Partner of the Year trophy sitting on a table.">
+                </div>
             </div>
         </div>
         <!-- Footer Copyright-->
