updated the contact site to be a little easier to read

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 <h3><span class="dot">.</span>Contact Me</h3>
             </div>
             <div class="contact-me content">
-                <a href="mailto:zhill@zacharyhill.co" target="_blank"><i class="fa-regular fa-envelope fa-5x"></i></a>
+                <a href="mailto:zhill@zacharyhill.co" target="_blank"><i class="fa-regular fa-envelope fa-4x"></i></a>
             </div>
         </div>
         <div class="link-tree container">
@@ -57,12 +57,14 @@
                 <h3><span class="dot">.</span>My Links</h3>
             </div>
             <div class="link-tree content">
-                <p>LinkedIn</p>
+                <h4>LinkedIn</h4>
                 <!-- LinkedIn Icon and Link -->
-                <a href="https://www.linkedin.com/in/zachary-hill-1b1b5b1a0/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+                    <a href="https://www.linkedin.com/in/zachary-hill-1b1b5b1a0/" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a>
                 <!-- GitHub Icon and Link -->
-                <p>GitHub</p>
-                <a href="https://github.com/zachreborn" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
+                <h4>GitHub</h4>
+                    <a href="https://github.com/zachreborn" target="_blank"><i class="fa-brands fa-github fa-4x"></i></a>
+                <h4>Resume</h4>
+                    <a href="./media/pdfs/2023_01_29_zachary_hill_resume_web.pdf" target="_blank"><i class="fa-regular fa-file-pdf fa-4x"></i></a>
             </div>
         </div>
         
