--- a/about.html
+++ b/about.html
@@ -98,17 +98,22 @@
                     <li>Built the 1, 3, and 5 year technology strategy for 20+ financial institutions for many years.</li>
                     <li>And most importantly, watched my team grow from individual young engineers into a tight-knit team of strong senior engineers and leaders.</li>
                 </ul>
-                <div class="highlights photos center">
-                    <img src="./media/images/2022_aws_partner_award.jpg" alt="Zachary Hill accepting the AWS Partner Award 2022 with three AWS leaders.">
-                    <img src="./media/images/ts_zachary_team_building.jpg" alt="Zachary Hill with group of people teambuilding by building bridges out of marshmellows and sticks.">
-                    <img src="./media/images/ts_zachary_aws_speaking.jpeg" alt="Zachary Hill speaking at AWS re:invent 2022">
-                    <img src="./media/images/2022_aws_partner_of_the_year.jpg" alt="2022 AWS Partner of the Year trophy sitting on a table.">
-                    <img src="./media/images/zachary_backpacking.jpg" alt="Zachary Hill backpacking in the mountains of Tahoe National Forest.">
-                    <img src="./media/images/zachary_adventure.jpg" alt="Zachary Hill embarking on a fishing trip. In the background is an Airstream and bush planes in a morning sunrise.">
-                    <img src="./media/images/ts_zachary_volunteer.jpg" alt="Zachary Hill volunteering at a local food bank.">
-                    <img src="./media/images/xita_fishing.jpg" alt="Xita, a dog, in a boat at sunset on a lake on Ontario Canada.">
-                    <img src="./media/images/xita_hiking.jpg" alt="Xita, a dog, hiking in the mountains of New Mexico.">
-                </div>
+            </div>
+        </div>
+        <div class="photos container">
+            <div class="photos header">
+                <h3><span class="dot">.</span>Photos</h3>
+            </div>
+            <div class="highlights photos center">
+                <img src="./media/images/2022_aws_partner_award.jpg" alt="Zachary Hill accepting the AWS Partner Award 2022 with three AWS leaders.">
+                <img src="./media/images/ts_zachary_team_building.jpg" alt="Zachary Hill with group of people teambuilding by building bridges out of marshmellows and sticks.">
+                <img src="./media/images/ts_zachary_aws_speaking.jpeg" alt="Zachary Hill speaking at AWS re:invent 2022">
+                <img src="./media/images/2022_aws_partner_of_the_year.jpg" alt="2022 AWS Partner of the Year trophy sitting on a table.">
+                <img src="./media/images/zachary_backpacking.jpg" alt="Zachary Hill backpacking in the mountains of Tahoe National Forest.">
+                <img src="./media/images/zachary_adventure.jpg" alt="Zachary Hill embarking on a fishing trip. In the background is an Airstream and bush planes in a morning sunrise.">
+                <img src="./media/images/ts_zachary_volunteer.jpg" alt="Zachary Hill volunteering at a local food bank.">
+                <img src="./media/images/xita_fishing.jpg" alt="Xita, a dog, in a boat at sunset on a lake on Ontario Canada.">
+                <img src="./media/images/xita_hiking.jpg" alt="Xita, a dog, hiking in the mountains of New Mexico.">
             </div>
         </div>
         <!-- Footer Copyright-->
