adding better tagging

--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
             <div class="photos header">
                 <h3><span class="dot">.</span>Photos</h3>
             </div>
-            <div class="highlights photos center">
+            <div class="photos center">
                 <img src="./media/images/2022_aws_partner_award.jpg" alt="Zachary Hill accepting the AWS Partner Award 2022 with three AWS leaders.">
                 <img src="./media/images/ts_zachary_team_building.jpg" alt="Zachary Hill with group of people teambuilding by building bridges out of marshmellows and sticks.">
                 <img src="./media/images/ts_zachary_aws_speaking.jpeg" alt="Zachary Hill speaking at AWS re:invent 2022">
