--- a/about.html
+++ b/about.html
@@ -100,8 +100,8 @@
                 </ul>
             </div>
         </div>
-        <div class="photos container">
-            <div class="photos header">
+        <div class="photo_album container">
+            <div class="photo_album header">
                 <h3><span class="dot">.</span>Photos</h3>
             </div>
             <div class="photos center">
