adding quick blurb

--- a/architecture.html
+++ b/architecture.html
@@ -45,7 +45,14 @@
             </nav>
         </header>
         <!-- Content-->
-        
+        <div class="container">
+            <div class="header">
+                <h3><span class="dot">.</span>About This Website</h3>
+            </div>
+            <div class="content">
+                <p>This website was created using HTML and CSS and created entirely by me (with some help from Github Co-Pilot). The website is hosted on AWS. The website is also responsive and works on mobile devices.</p>
+            </div>
+        </div>
         <!-- Footer Copyright-->
         <footer>
             <div class="footer">
