--- a/architecture.html
+++ b/architecture.html
@@ -53,6 +53,15 @@
                 <p>This website was created using HTML and CSS and created entirely by me (with some help from Github Co-Pilot). The website is hosted on AWS. The website is also responsive and works on mobile devices.</p>
             </div>
         </div>
+        <div class="container">
+            <div class="header">
+                <h3><span class="dot">.</span>Topology</h3>
+            </div>
+            <div class="content">
+                <img src="./media/images/zachary_hill_website_s3.png" alt="Website topology diagram">
+                <img src="./media/images/zachary_hill_website_s3.svg" alt="Website topology diagram">
+            </div>
+        </div>
         <!-- Footer Copyright-->
         <footer>
             <div class="footer">
