Chose to use a png instead of an svg for the website screenshot. The svg was not rendering properly on the website. The png is a little larger, but it is a better representation of the website.

--- a/architecture.html
+++ b/architecture.html
@@ -50,7 +50,7 @@
                 <h3><span class="dot">.</span>About This Website</h3>
             </div>
             <div class="content">
-                <p>This website was created using HTML and CSS and created entirely by me (with some help from Github Co-Pilot). The website is hosted on AWS. The website is also responsive and works on mobile devices.</p>
+                <p>This website was created using HTML and CSS entirely by me with a little help from GitHub Co-Pilot. The website is hosted on AWS. The repository for the website and the cloud environment are hosted on GitHub. The cloud environment was created using terraform. The website is deployed with GitHub Actions. The website itself is also responsive and works on mobile devices.</p>
             </div>
         </div>
         <div class="container">
@@ -58,8 +58,7 @@
                 <h3><span class="dot">.</span>Topology</h3>
             </div>
             <div class="content">
-                <img src="./media/images/zachary_hill_website_s3.png" alt="Website topology diagram">
-                <img src="./media/images/zachary_hill_website_s3.svg" alt="Website topology diagram">
+                <img src="./media/images/zachary_hill_website_s3.png" alt="Website topology diagram" id="topology-image">
             </div>
         </div>
         <!-- Footer Copyright-->
