added website links to github

--- a/architecture.html
+++ b/architecture.html
@@ -51,6 +51,10 @@
             </div>
             <div class="content">
                 <p>This website was created using HTML and CSS entirely by me with a little help from GitHub Co-Pilot. The website is hosted on AWS. The repository for the website and the cloud environment are hosted on GitHub. The cloud environment was created using terraform. The website is deployed with GitHub Actions. The website itself is also responsive and works on mobile devices.</p>
+                <h4>Website Links</h4>
+                <ul>
+                    <li><a href="https://github.com/zachreborn/resume_website" target="_blank"><i class="fa-brands fa-github fa-2x"></i>https://github.com/zachreborn/resume_website</a></li>
+                </ul>
             </div>
         </div>
         <div class="container">
