--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                 <h4>Highlights</h4>
                 <p>It's difficult to cover the breadth of my last 15 years without writing a long list. Instead, I'll try and cover some highlights which stand out to me.</p>
                 <ul>
-                    <li>Team won a AWS 2022 &#38; 2021 Partner of the year award.</li>
+                    <li>Team won a AWS 2022 &#38; 2021 NPO Partner Of The Year award.</li>
                     <li>Architected scalable web application for major power company in the United States. Required scaling from 10,000 concurrent users average to &#62;4 million concurrent users.</li>
                     <li>First organization and project to migrate &#62;90% of credit union servers and core provider to AWS public cloud.</li>
                     <li>Built a cloud backup product SaaS platform utilizing python and AWS serverless technology: Python, Lambda, SQS, and SNS.</li>
