added class tag for gallery for more clear documentation

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 </ul>
             </nav>
         </header>
+
         <!-- Greetings-->
         <div class="greetings container">
             <div class="greetings-text">
@@ -53,6 +54,7 @@
             </div>
             <img src="./media/images/ts_zachary_bw.jpg" alt="Zachary Hill laughing while looking into the camera." id="headshot-image">
         </div>
+
         <!-- Content-->
         <!-- About Me -->
         <div class="about-me container">
@@ -239,7 +241,7 @@
         </div>
 
         <!-- Photo Gallery -->
-        <div class="container">
+        <div class="gallery container">
             <div class="header">
                 <h3><span class="dot">.</span>Photos</h3>
             </div>
