added links to locations on the page for the content headers

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
             <nav class="navbar">
                 <ul class="menu">
                     <li class="item"><a href="index.html">Home</a></li>
+                    <li class="item"><a href="#about-me">About</a></li>
+                    <li class="item"><a href="#philosophy">Philosophy</a></li>
+                    <li class="item"><a href="#experience">Experience</a></li>
+                    <li class="item"><a href="#highlights">Highlights</a></li>
+                    <li class="item"><a href="#skills">Skills</a></li>
+                    <li class="item"><a href="#education">Education</a></li>
+                    <li class="item"><a href="#gallery">Photos</a></li>
                     <li class="item"><a href="contact.html">Contact</a></li>
                     <li class="item"><a href="architecture.html">About This Website</a></li>
                 </ul>
@@ -60,7 +67,7 @@
             <div class="about-me header">
                 <h3><span class="dot">.</span>About Me</h3>
             </div>
-            <div class="about-me content">
+            <div class="about-me content" id="about-me">
                 <p>My leadership style is that of a transformational leader. I have a unique perspective on the interplay of technology and business from both the breadth and depth of my body of work. That work spanned varying organization sizes and industry types. I began working with my previous two organizations while they were in the startup phase. Each company was a managed service provider or MSP. While there, I worked with established organizations ranging from 50+ employees to 6000+ employees. I've worked with enormous healthcare organizations, tiny financial institutions, technology firms, hospitality organizations, construction, and enormous financial institutions. This perspective has given me an understanding of the evolution an organization goes through in its lifetime. This experience has helped me to hone in and focus on what matters most for each organization, in both the present and future, by leveraging design thinking principles.
                     <br><br>
                     Most recently, I have had the privilege of working with a fantastic leadership team at Think|Stack. A pivotal person on that team and in my career has been Chris Sachse, CEO at Think|Stack. Chris is a forward thinker when it comes to innovation in business, design thinking, and putting people first. I've learned a lot about how to be a better leader through Chris.
@@ -79,7 +86,7 @@
             <div class="philosophy header">
                 <h3><span class="dot">.</span>My Technology Philosophy</h3>
             </div>
-            <div class="philosophy content">
+            <div class="philosophy content" id="philosophy">
                 <h4>Technology Should Simplify</h4>
                     <p>Technology should make our lives simpler, not harder. People follow the path of least resistance, and that means complexity or difficulty leads to ineffective technology. Don't settle for technology that solves one problem but creates another. Utilize the right technology to create efficiency and simplicity.</p>
                 <h4>Transparent Engineering</h4>
@@ -98,7 +105,7 @@
             <div class="experience header">
                 <h3><span class="dot">.</span>Experience</h3>
             </div>
-            <div class="timeline-container">
+            <div class="timeline-container" id="experience">
                 <div class="experience-content">
                     <h4 class="experience-date-header">2018 - Present</h4>
                     <p class="experience-title">Chief Technology Officer</p>
@@ -131,7 +138,7 @@
             <div class="highlights header">
                 <h3><span class="dot">.</span>Accolades &#38; Highlights</h3>
             </div>
-            <div class="highlights content">
+            <div class="highlights content" id="highlights">
                 <h4>Highlights</h4>
                 <p>It's difficult to cover the breadth of my last 15 years without writing a long list. Instead, I'll try and cover some highlights which stand out to me.</p>
                 <ul>
@@ -154,7 +161,7 @@
             <div class="skills header">
                 <h3><span class="dot">.</span>Skills</h3>
             </div>
-            <div class="skills-content">
+            <div class="skills-content" id="skills">
                 <!-- Architecture & Design -->
                 <h5 class="skill">Architecture &#38; Design
                     <span>98%</span>
@@ -226,7 +233,7 @@
             <div class="education header">
                 <h3><span class="dot">.</span>Education &#38;<br>Certifications</h3>
             </div>
-            <div class="education-content">
+            <div class="education-content" id="education">
                 <ul>
                     <li>AWS Solutions Architect - Professional | 2022 &#38; 2019</li>
                     <li>AWS Solutions Architect - Associate | 2022 &#38; 2019</li>
@@ -244,7 +251,7 @@
             <div class="header">
                 <h3><span class="dot">.</span>Photos</h3>
             </div>
-            <div class="photos center">
+            <div class="photos center" id="gallery">
                 <img class="photo" src="./media/images/2022_aws_partner_award.jpg" alt="Zachary Hill accepting the AWS Partner Award 2022 with three AWS leaders.">
                 <img class="photo" src="./media/images/zachary_adventure.jpg" alt="Zachary Hill embarking on a fishing trip. In the background is an Airstream and bush planes in a morning sunrise.">
                 <img class="photo" src="./media/images/ts_zachary_team_building.jpg" alt="Zachary Hill with group of people teambuilding by building bridges out of marshmellows and sticks.">
