--- a/error.html
+++ b/error.html
@@ -38,6 +38,7 @@
             <nav class="navbar">
                 <ul class="menu">
                     <li class="item"><a href="index.html">Home</a></li>
+                    <li class="item"><a href="index.html#about-me">About</a></li>
                     <li class="item"><a href="contact.html">Contact</a></li>
                     <li class="item"><a href="architecture.html">About This Website</a></li>
                 </ul>
