--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@
             <nav class="navbar">
                 <ul class="menu">
                     <li class="item"><a href="index.html">Home</a></li>
-                    <li class="item"><a href="#about-me">About</a></li>
-                    <li class="item"><a href="#philosophy">Philosophy</a></li>
-                    <li class="item"><a href="#experience">Experience</a></li>
-                    <li class="item"><a href="#highlights">Highlights</a></li>
-                    <li class="item"><a href="#skills">Skills</a></li>
-                    <li class="item"><a href="#education">Education</a></li>
-                    <li class="item"><a href="#gallery">Photos</a></li>
+                    <li class="item"><a href="index.html#about-me">About</a></li>
                     <li class="item"><a href="contact.html">Contact</a></li>
                     <li class="item"><a href="architecture.html">About This Website</a></li>
                 </ul>
@@ -140,18 +134,18 @@
             </div>
             <div class="highlights content" id="highlights">
                 <h4>Highlights</h4>
-                <p>It's difficult to cover the breadth of my last 15 years without writing a long list. Instead, I'll try and cover some highlights which stand out to me.</p>
+                <p>It's difficult to cover the breadth and depth of my last 15 years in such a small snapshot. Instead, I'll try and cover some highlights which have stood out to me.</p>
                 <ul>
-                    <li>Team won a AWS 2022 &#38; 2021 NPO Partner Of The Year award.</li>
-                    <li>Architected scalable web application for major power company in the United States. Required scaling from 10,000 concurrent users average to &#62;4 million concurrent users.</li>
-                    <li>First organization and project to migrate &#62;90% of credit union servers and core provider to AWS public cloud.</li>
-                    <li>Built a cloud backup product SaaS platform utilizing python and AWS serverless technology: Python, Lambda, SQS, and SNS.</li>
-                    <li>Built out &#62;98% of all terraform modules, 25,000+ lines of code, which are leveraged in projects and managed services</li>
-                    <li>Led incident response and recovery for 4 major ransomware events, including a major healthcare provider and major financial institution. Required migration of all services to the cloud in order to preserve forensics and speed recovery in parallel.</li>
-                    <li>Led and participated in design thinking sessions with organizations helping them to identify pain points, resolutions, and revolutionize their whole business in a new trajectory.</li>
-                    <li>Built the annual technology budget for 20+ financial intitutions for many years.</li>
-                    <li>Built the 1, 3, and 5 year technology strategy for 20+ financial institutions for many years.</li>
-                    <li>And most importantly, watched my team grow from individual young engineers into a tight-knit team of strong senior engineers and leaders.</li>
+                    <li><p>Our team won a AWS 2022 &#38; 2021 NPO Partner Of The Year award. I was pivotal in the vision, strategy, and execution of making this come to be.</p></li>
+                    <li><p>Architected scalable web application for major power company in the United States. Required scaling from 10,000 concurrent users on average to &#62;4 million concurrent users.</p></li>
+                    <li><p>First organization and project to migrate &#62;90% of credit union servers and core provider to AWS public cloud.</p></li>
+                    <li><p>Built a cloud backup product SaaS platform utilizing python and AWS serverless technology: Python, Lambda, SQS, and SNS.</p></li>
+                    <li><p>Built out &#62;98% of all terraform modules, 25,000+ lines of code, which are leveraged in projects and managed services</p></li>
+                    <li><p>Led incident response and recovery for 4 major ransomware events, including a major healthcare provider and major financial institution. Required migration of all services to the cloud in order to preserve forensics and speed recovery in parallel.</p></li>
+                    <li><p>Led and participated in design thinking sessions with organizations helping them to identify pain points, resolutions, and revolutionize their whole business in a new trajectory.</p></li>
+                    <li><p>Built the annual technology budget for 20+ financial intitutions for many years.</p></li>
+                    <li><p>Built the 1, 3, and 5 year technology strategy for 20+ financial institutions for many years.</p></li>
+                    <li><p>And most importantly, watched my team grow from individual young engineers into a tight-knit team of strong senior engineers and leaders.</p></li>
                 </ul>
             </div>
         </div>
