--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
             </nav>
         </header>
         <!-- Content-->
+        <!-- Contact Me -->
         <div class="contact-me container">
             <div class="contact-me header">
                 <h3><span class="dot">.</span>Contact Me</h3>
@@ -53,19 +54,22 @@
                 <a href="mailto:zhill@zacharyhill.co" target="_blank"><i class="fa-regular fa-envelope fa-4x"></i></a>
             </div>
         </div>
+
+        <!-- Link Tree -->
         <div class="link-tree container">
             <div class="link-tree header">
                 <h3><span class="dot">.</span>My Links</h3>
             </div>
             <div class="link-tree content">
+                <!-- Resume Icon and Link -->
+                <h4>Resume</h4>
+                    <a href="./media/pdfs/2023_01_29_zachary_hill_resume_web.pdf" target="_blank"><i class="fa-regular fa-file-pdf fa-4x"></i></a>
                 <h4>LinkedIn</h4>
                 <!-- LinkedIn Icon and Link -->
                     <a href="https://www.linkedin.com/in/zachary-hill-1b1b5b1a0/" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a>
                 <!-- GitHub Icon and Link -->
                 <h4>GitHub</h4>
                     <a href="https://github.com/zachreborn" target="_blank"><i class="fa-brands fa-github fa-4x"></i></a>
-                <h4>Resume</h4>
-                    <a href="./media/pdfs/2023_01_29_zachary_hill_resume_web.pdf" target="_blank"><i class="fa-regular fa-file-pdf fa-4x"></i></a>
             </div>
         </div>
         
