testing resume link

--- a/contact.html
+++ b/contact.html
@@ -45,12 +45,22 @@
             </nav>
         </header>
         <!-- Content-->
+        <!-- Resume -->
+        <div class="resume container">
+            <div class="resume header center">
+                <h3><span class="dot">.</span>Resume</h3>
+            </div>
+            <a href="./media/pdfs/2023_01_29_zachary_hill_resume_web.pdf" target="_blank"><i class="fa-regular fa-file-pdf fa-5x"></i></a>
+        </div>
+        
         <!-- Contact Me -->
         <div class="contact-me container">
             <div class="contact-me header">
                 <h3><span class="dot">.</span>Contact Me</h3>
             </div>
-            <div class="contact-me content">
+            <div class="icon-link content">
+                <!-- Email Icon and Link -->
+                <h4>Email</h4>
                 <a href="mailto:zhill@zacharyhill.co" target="_blank"><i class="fa-regular fa-envelope fa-4x"></i></a>
             </div>
         </div>
@@ -61,15 +71,21 @@
                 <h3><span class="dot">.</span>My Links</h3>
             </div>
             <div class="link-tree content">
-                <!-- Resume Icon and Link -->
-                <h4>Resume</h4>
+                <div class="icon-link">
+                    <!-- Resume Icon and Link -->
+                    <h4>Resume</h4>
                     <a href="./media/pdfs/2023_01_29_zachary_hill_resume_web.pdf" target="_blank"><i class="fa-regular fa-file-pdf fa-4x"></i></a>
-                <h4>LinkedIn</h4>
-                <!-- LinkedIn Icon and Link -->
+                </div>
+                <div class="icon-link">
+                    <!-- LinkedIn Icon and Link -->
+                    <h4>LinkedIn</h4>
                     <a href="https://www.linkedin.com/in/zachary-hill-1b1b5b1a0/" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a>
+                </div>
+                <div class="icon-link">
                 <!-- GitHub Icon and Link -->
-                <h4>GitHub</h4>
+                    <h4>GitHub</h4>
                     <a href="https://github.com/zachreborn" target="_blank"><i class="fa-brands fa-github fa-4x"></i></a>
+                </div>
             </div>
         </div>
         
