--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,9 @@
             <div class="resume header center">
                 <h3><span class="dot">.</span>Resume</h3>
             </div>
-            <a href="./media/pdfs/2023_01_29_zachary_hill_resume_web.pdf" target="_blank"><i class="fa-regular fa-file-pdf fa-5x"></i></a>
+            <div class="icon-link content">
+                <a href="./media/pdfs/2023_01_29_zachary_hill_resume_web.pdf" target="_blank"><i class="fa-regular fa-file-pdf fa-5x"></i></a>
+            </div>
         </div>
 
         <!-- Contact Me -->
@@ -60,7 +62,7 @@
             </div>
             <div class="icon-link content">
                 <!-- Email Icon and Link -->
-                <h4>Email</h4>
+                <!-- <h4>Email</h4> -->
                 <a href="mailto:zhill@zacharyhill.co" target="_blank"><i class="fa-regular fa-envelope fa-5x"></i></a>
             </div>
         </div>
@@ -73,13 +75,18 @@
             <div class="link-tree content">
                 <div class="icon-link">
                     <!-- LinkedIn Icon and Link -->
-                    <h4>LinkedIn</h4>
+                    <!-- <h4>LinkedIn</h4> -->
                     <a href="https://www.linkedin.com/in/zachary-hill-1b1b5b1a0/" target="_blank"><i class="fab fa-linkedin fa-5x"></i></a>
                 </div>
                 <div class="icon-link">
                 <!-- GitHub Icon and Link -->
-                    <h4>GitHub</h4>
+                    <!-- <h4>GitHub</h4> -->
                     <a href="https://github.com/zachreborn" target="_blank"><i class="fa-brands fa-github fa-5x"></i></a>
+                </div>
+                <div class="icon-link">
+                    <!-- Discord Icon and Link -->
+                    <!-- <h4>Discord</h4> -->
+                    <a href="https://discord.com/users/reborn#4623" target="_blank"><i class="fab fa-discord fa-5x"></i></a>
                 </div>
             </div>
         </div>
