--- a/architecture.html
+++ b/architecture.html
@@ -62,7 +62,8 @@
             </div>
             <div class="content">
                 <div class="icon-link">
-                    <a href="https://github.com/zachreborn/resume_website" target="_blank"><i class="fa-brands fa-github fa-5x"></i></a>
+                    <a href="https://github.com/zachreborn/resume_website" target="_blank"><i class="fa-brands fa-github fa-5x"></i>Website - resume_website</a>
+                    <a href="https://github.com/zachreborn/octo_prod_resume" target="_blank"><i class="fa-brands fa-github fa-5x"></i>Terraform - octo_prod_resume</a>
                 </div>
             </div>
         </div>
