added a better visual structure to the additional github repositories

--- a/architecture.html
+++ b/architecture.html
@@ -60,12 +60,18 @@
             <div class="header">
                 <h3><span class="dot">.</span>Repository Links</h3>
             </div>
-            <div class="content">
+            <div class="link-tree content">
                 <div class="icon-link">
-                    <a href="https://github.com/zachreborn/resume_website" target="_blank"><i class="fa-brands fa-github fa-5x"></i>Website - resume_website</a>
+                    <p>Website Code</p>
+                    <a href="https://github.com/zachreborn/resume_website" target="_blank"><i class="fa-brands fa-github fa-5x"></i></a>
                 </div>
                 <div class="icon-link">
-                    <a href="https://github.com/zachreborn/octo_prod_resume" target="_blank"><i class="fa-brands fa-github fa-5x"></i>Terraform - octo_prod_resume</a>
+                    <p>Terraform Code</p>
+                    <a href="https://github.com/zachreborn/octo_prod_resume" target="_blank"><i class="fa-brands fa-github fa-5x"></i></a>
+                </div>
+                <div class="icon-link">
+                    <p>Terraform Modules</p>
+                    <a href="https://github.com/zachreborn/terraform-modules" target="_blank"><i class="fa-brands fa-github fa-5x"></i></a>
                 </div>
             </div>
         </div>
