added govplace summary

--- a/index.html
+++ b/index.html
@@ -101,7 +101,13 @@
             </div>
             <div class="timeline-container" id="experience">
                 <div class="experience-content">
-                    <h4 class="experience-date-header">2018 - Present</h4>
+                    <h4 class="experience-date-header">2018 - April 2023</h4>
+                    <p class="experience-title">Sr Director of Strategic Technology</p>
+                    <p class="experience-company">Govplace</p>
+                    <p class="experience-summary">An organization trying to reinvent itself with leadership and direction. My role has been to provide vision, strategy, and experience in technology.</p>
+                </div>
+                <div class="experience-content">
+                    <h4 class="experience-date-header">2018 - April 2023</h4>
                     <p class="experience-title">Chief Technology Officer</p>
                     <p class="experience-company">Think|Stack</p>
                     <p class="experience-summary">Technical visionary, strategist, and team leader. I built the services and projects we sold to our customers with an eye towards common sense and putting myself in the shoes of our customers. My focus was on understanding problems in order to design and build out solutions that could be implemented by a team which included our engineers and our customer's technical team(s).</p>
