updates to content for govplace

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <h4 class="experience-date-header">April 2023 - Present</h4>
                     <p class="experience-title">Sr Director of Strategic Technology</p>
                     <p class="experience-company">Govplace</p>
-                    <p class="experience-summary">An organization trying to reinvent itself with leadership and direction. My role has been to provide vision, strategy, and experience in technology.</p>
+                    <p class="experience-summary">An organization trying to reinvent itself with new leadership and a new direction. My role has been to provide vision, strategy, and experience in technology.</p>
                 </div>
                 <div class="experience-content">
                     <h4 class="experience-date-header">2018 - April 2023</h4>
