--- a/index.html
+++ b/index.html
@@ -101,7 +101,13 @@
             </div>
             <div class="timeline-container" id="experience">
                 <div class="experience-content">
-                    <h4 class="experience-date-header">April 2023 - Present</h4>
+                    <h4 class="experience-date-header">September 2023 - Present</h4>
+                    <p class="experience-title">Interim Chief Technology Officer</p>
+                    <p class="experience-company">Sandia Laboratory FCU</p>
+                    <p class="experience-summary">Technical visionary, strategist, and team leader.</p>
+                </div>
+                <div class="experience-content">
+                    <h4 class="experience-date-header">April 2023 - September 2023</h4>
                     <p class="experience-title">Sr Director of Strategic Technology</p>
                     <p class="experience-company">Govplace</p>
                     <p class="experience-summary">An organization trying to reinvent itself with new leadership and a new direction. My role has been to provide vision, strategy, and experience in technology.</p>
