added octo ventures

--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
                     <p class="experience-summary">Technical visionary, strategist, and team leader.</p>
                 </div>
                 <div class="experience-content">
+                    <h4 class="experience-date-header">April 2023 - Present</h4>
+                    <p class="experience-title">Founder</p>
+                    <p class="experience-company">Octo Ventures</p>
+                    <p class="experience-summary">Technology consulting organization.</p>
+                </div>
+                <div class="experience-content">
                     <h4 class="experience-date-header">April 2023 - September 2023</h4>
                     <p class="experience-title">Sr Director of Strategic Technology</p>
                     <p class="experience-company">Govplace</p>
