--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <h4 class="experience-date-header">April 2023 - Present</h4>
                     <p class="experience-title">Founder</p>
                     <p class="experience-company">Octo Ventures</p>
-                    <p class="experience-summary">Technology consulting organization.</p>
+                    <p class="experience-summary">I founded this company to explore technology contracts while my partner and I traveled the country in our Airstream. This has been my proof of concept testing grounds for new ideas and exploring new directions.</p>
                 </div>
                 <div class="experience-content">
                     <h4 class="experience-date-header">April 2023 - September 2023</h4>
@@ -134,7 +134,7 @@
                     <h4 class="experience-date-header">2008 - 2015</h4>
                     <p class="experience-title">Senior Network Engineer &#38; Systems Engineer</p>
                     <p>RedZone Technologies</p>
-                    <p class="experience-summary">Took control of all networking projects within my first three months while self-teaching with CCNA courses. Focused on learning from the strongest senior engineers and quickly took lead on all projects assigned to me. Was the primary senior network and virtualization engineer after proving myself with <strong>200+</strong> network implementation projects and <strong>100+</strong> virtualization implementation projects.</p>
+                    <p class="experience-summary">Oversaw all networking projects within my first three months while self-teaching with CCNA courses. Focused on learning from the strongest senior engineers and quickly took lead on all projects assigned to me. Was the primary senior network and virtualization engineer after proving myself with <strong>200+</strong> network implementation projects and <strong>100+</strong> virtualization implementation projects.</p>
                 </div>
                 <div class="experience-content">
                     <h4 class="experience-date-header">2006 - 2008</h4>
