--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <h4 class="experience-date-header">September 2023 - Present</h4>
                     <p class="experience-title">Interim Chief Technology Officer</p>
                     <p class="experience-company">Sandia Laboratory FCU</p>
-                    <p class="experience-summary">Technical visionary, strategist, and team leader. This 520 person, 4 billion assets organization was without a CIO/CTO for the better part of a year and needing help to right the ship. People, process, and technology were all out of alignment with each other and the needs of the organization. My role was to come in and rebuild the culture and stabalize the technology. I then set my sights on the technology vision and strategy.</p>
+                    <p class="experience-summary">Technical visionary, strategist, and team leader. This 4 billion in assets organization was without a CIO/CTO for the better part of a year and needing help to right the ship. People, process, and technology were all out of alignment with each other and the needs of the organization. My role was to come in and rebuild the culture and stabalize the technology. I then set my sights on the technology vision and strategy.</p>
                 </div>
                 <div class="experience-content">
                     <h4 class="experience-date-header">April 2023 - Present</h4>
