Adding SLFCU experience (#18)
* added slfcu

* added octo ventures

* expended SLFCU prose

* removed max-height from #headshot-image

* past tense

* updated Octo Ventures

* slfcu cleanup

--- a/index.html
+++ b/index.html
@@ -101,10 +101,22 @@
             </div>
             <div class="timeline-container" id="experience">
                 <div class="experience-content">
+                    <h4 class="experience-date-header">September 2023 - Present</h4>
+                    <p class="experience-title">Interim Chief Technology Officer</p>
+                    <p class="experience-company">Sandia Laboratory FCU</p>
+                    <p class="experience-summary">Technical visionary, strategist, and team leader. This 4 billion in assets organization was without a CIO/CTO for the better part of a year and needing help to right the ship. People, process, and technology were all out of alignment with each other and the needs of the organization. My role was to come in and rebuild the culture and stabalize the technology. I then set my sights on the technology vision and strategy.</p>
+                </div>
+                <div class="experience-content">
                     <h4 class="experience-date-header">April 2023 - Present</h4>
+                    <p class="experience-title">Founder</p>
+                    <p class="experience-company">Octo Ventures</p>
+                    <p class="experience-summary">I founded this company to explore technology contracts while my partner and I traveled the country in our Airstream. This has been my proof of concept testing grounds for new ideas and exploring new directions.</p>
+                </div>
+                <div class="experience-content">
+                    <h4 class="experience-date-header">April 2023 - September 2023</h4>
                     <p class="experience-title">Sr Director of Strategic Technology</p>
                     <p class="experience-company">Govplace</p>
-                    <p class="experience-summary">An organization trying to reinvent itself with new leadership and a new direction. My role has been to provide vision, strategy, and experience in technology.</p>
+                    <p class="experience-summary">An organization trying to reinvent itself with new leadership and a new direction. My role was to provide vision, strategy, and experience in technology.</p>
                 </div>
                 <div class="experience-content">
                     <h4 class="experience-date-header">2018 - April 2023</h4>
@@ -122,7 +134,7 @@
                     <h4 class="experience-date-header">2008 - 2015</h4>
                     <p class="experience-title">Senior Network Engineer &#38; Systems Engineer</p>
                     <p>RedZone Technologies</p>
-                    <p class="experience-summary">Took control of all networking projects within my first three months while self-teaching with CCNA courses. Focused on learning from the strongest senior engineers and quickly took lead on all projects assigned to me. Was the primary senior network and virtualization engineer after proving myself with <strong>200+</strong> network implementation projects and <strong>100+</strong> virtualization implementation projects.</p>
+                    <p class="experience-summary">Oversaw all networking projects within my first three months while self-teaching with CCNA courses. Focused on learning from the strongest senior engineers and quickly took lead on all projects assigned to me. Was the primary senior network and virtualization engineer after proving myself with <strong>200+</strong> network implementation projects and <strong>100+</strong> virtualization implementation projects.</p>
                 </div>
                 <div class="experience-content">
                     <h4 class="experience-date-header">2006 - 2008</h4>
