--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="about-me content" id="about-me">
                 <p>My leadership style is that of a transformational leader. I have a unique perspective on the interplay of technology and business from both the breadth and depth of my body of work. That work spanned varying organization sizes and industry types. I began working with my previous two organizations while they were in the startup phase. Each company was a managed service provider or MSP. While there, I worked with established organizations ranging from 50+ employees to 6000+ employees. I've worked with enormous healthcare organizations, tiny financial institutions, technology firms, hospitality organizations, construction, and enormous financial institutions. This perspective has given me an understanding of the evolution an organization goes through in its lifetime. This experience has helped me to hone in and focus on what matters most for each organization, in both the present and future, by leveraging design thinking principles.
                     <br><br>
-                    Most recently, I have had the privilege of working with a fantastic leadership team at Think|Stack. A pivotal person on that team and in my career has been Chris Sachse, CEO at Think|Stack. Chris is a forward thinker when it comes to innovation in business, design thinking, and putting people first. I've learned a lot about how to be a better leader through Chris.
+                    Most recently, I have had the privilege of working with a fantastic leadership team at Think|Stack and at Sandia Laboratory FCU. A pivotal person on the Think|Stack team and in my career has been Chris Sachse, CEO at Think|Stack. Chris is a forward thinker when it comes to innovation in business, design thinking, and putting people first. I've learned a lot about how to be a better leader through Chris.
                     <br><br>
                     You'll find that I enjoy amping up my team both behind the scenes and publicly. Whether that be taking the time to explore the team's hobbies with them, hosting a session of D&#38;D, an escape room happy hour, or making sure our customers know the impact each individual team member is having for them. I come from a history of playing team sports. Sports taught me the value in lifting up those around you. The power of confidence and positive thinking in any one member of a team can spread like wildfire and allow for impressive feats, previously thought impossible. In that same way, failure is something a team bears the burden of together. A single play may have been what sticks in one's memories, but it was the team that brought that play to be. Even in that case, failure is merely a learning opportunity put forth right in front of your eyes. A guidepost pointing you and the team towards continuous improvement.
                     <br><br>
@@ -101,10 +101,16 @@
             </div>
             <div class="timeline-container" id="experience">
                 <div class="experience-content">
-                    <h4 class="experience-date-header">September 2023 - Present</h4>
+                    <h4 class="experience-date-header">April 2024 - Present</h4>
+                    <p class="experience-title">SVP, Technology</p>
+                    <p class="experience-company">Sandia Laboratory FCU</p>
+                    <p class="experience-summary">Technology visionary, strategist, and team leader. I oversee technology and cybersecurity within the organization. My role is to both enable and protect the organization through technology by aligning business goals with technology goals.</p>
+                </div>
+                <div class="experience-content">
+                    <h4 class="experience-date-header">September 2023 - April 2024</h4>
                     <p class="experience-title">Interim Chief Technology Officer</p>
                     <p class="experience-company">Sandia Laboratory FCU</p>
-                    <p class="experience-summary">Technical visionary, strategist, and team leader. This 4 billion in assets organization was without a CIO/CTO for the better part of a year and needing help to right the ship. People, process, and technology were all out of alignment with each other and the needs of the organization. My role was to come in and rebuild the culture and stabalize the technology. I then set my sights on the technology vision and strategy.</p>
+                    <p class="experience-summary">Technology visionary, strategist, and team leader. SLFCU was going through a transition phase rebuilding their culture and vision. My role was to rebuild the culture, stabalize the technology, and move into the modern era where technology platforms enable the business.</p>
                 </div>
                 <div class="experience-content">
                     <h4 class="experience-date-header">April 2023 - Present</h4>
