updates to content

--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
                     <h4 class="experience-date-header">April 2024 - Present</h4>
                     <p class="experience-title">SVP, Technology</p>
                     <p class="experience-company">Sandia Laboratory FCU</p>
-                    <p class="experience-summary">Technology visionary, strategist, and team leader. I oversee technology and cybersecurity within the organization. My role is to both enable and protect the organization through technology by aligning business goals with technology goals.</p>
+                    <p class="experience-summary">Technology visionary, strategist, and leader. I oversee technology and cybersecurity within the organization. My role is to both enable and protect the organization through technology by aligning technology to business goals.</p>
                 </div>
                 <div class="experience-content">
                     <h4 class="experience-date-header">September 2023 - April 2024</h4>
                     <p class="experience-title">Interim Chief Technology Officer</p>
                     <p class="experience-company">Sandia Laboratory FCU</p>
-                    <p class="experience-summary">Technology visionary, strategist, and team leader. SLFCU was going through a transition phase rebuilding their culture and vision. My role was to rebuild the culture, stabalize the technology, and move into the modern era where technology platforms enable the business.</p>
+                    <p class="experience-summary">Technology visionary, strategist, and leader. SLFCU was going through a transition phase rebuilding their culture and vision. My role was to rebuild the culture, stabalize the technology, and move into the modern era where technology platforms enable the business.</p>
                 </div>
                 <div class="experience-content">
                     <h4 class="experience-date-header">April 2023 - Present</h4>
@@ -165,7 +165,7 @@
                     <li><p>First organization and project to migrate &#62;90% of credit union servers and core provider to AWS public cloud.</p></li>
                     <li><p>Built a cloud backup product SaaS platform utilizing python and AWS serverless technology: Python, Lambda, SQS, and SNS.</p></li>
                     <li><p>Built out &#62;98% of all terraform modules, 50,000+ lines of code, which are leveraged in projects and managed services</p></li>
-                    <li><p>Led incident response and recovery for 4 major ransomware events, including a major healthcare provider and major financial institution. Required migration of all services to the cloud in order to preserve forensics and speed recovery in parallel.</p></li>
+                    <li><p>Led incident response and recovery for 7 major ransomware events, including a major healthcare provider and major financial institution. Required migration of all services to the cloud in order to preserve forensics and speed recovery in parallel.</p></li>
                     <li><p>Led and participated in design thinking sessions with organizations helping them to identify pain points, resolutions, and revolutionize their whole business in a new trajectory.</p></li>
                     <li><p>Built the annual technology budget for 20+ financial intitutions for many years.</p></li>
                     <li><p>Built the 1, 3, and 5 year technology strategy for 20+ financial institutions for many years.</p></li>
